proxima-macros/tests/ui/pipe_non_result_return.stderr
error: #[proxima::pipe] fns must return Result<Out, Err>
 --> tests/ui/pipe_non_result_return.rs:5:23
  |
5 | fn bad(input: u64) -> u64 {
  |                       ^^^
